# rosie

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
agents/: executor_agent.py  planner_agent.py  reviewer_agent.py
cli/: __init__.py  main.py  tui.py
core/: __init__.py  graph.py
docs/: agents.md  prompting.md
os_win/: __init__.py  onedrive.py  paths.py  recycle_bin.py  reparse_points.py
projections/: __init__.py  base.py  checkpoint_log.py  embed_cache.py  file_index.py  plan_view.py
schemas/: __init__.py  checkpoint.py  events.py  plan.py  rules.py
storage/: event_store.py
tests/: conftest.py  test_cli_apply_and_undo.py  test_cli_scan_smoke.py  test_clustering_basic.py  test_clustering_degenerate_hdbscan.py  test_conflict_resolver.py  test_dev_clean.py  test_embeddings_and_cache.py  test_event_store.py  test_events_serialization.py  test_file_index_rulematched_defaults.py  test_file_scanner_and_index.py  test_imports.py  test_orchestrator_incremental.py  test_orchestrator_plan_view_update.py  test_os_win_paths.py  test_plan_limits_hash.py  test_plan_merge_clusters.py  test_plan_projection_determinism.py  test_planner_agent.py  test_recycle_bin_noop.py  test_reparse_points.py  test_reviewer_agent_tui.py  test_rule_engine.py  test_rules_loader.py  test_safety_global_filters.py  test_safety_thresholds.py  test_tree_shaper_limits.py
tools/: checkpoint.py  clustering.py  conflict_resolver.py  dev_clean.py  embeddings.py  file_ops.py  file_scanner.py  rule_engine.py  tree_shaper.py
(+1 files in other folders)
