[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rosie"
version = "0.0.1"
description = "Rosie — local-first CLI maid for Windows cleanup (event-sourced)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Rosie Maintainers" }
]
dependencies = [
  "typer>=0.9",
  "rich>=13.0",
  "pydantic>=2.6",
  "blake3>=0.4",
  "psutil>=5.9",
  "platformdirs>=4.2",
  "aiofiles>=23.2",
  "aiosqlite>=0.19",
  "structlog>=23.1",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.3",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.8",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "cli",
  "core",
  "agents",
  "os_win",
  "schemas",
  "storage",
  "projections",
  "tools",
]
